@@ -10,7 +10,6 @@ package org.elasticsearch.xpack.esql.action;
 import com.carrotsearch.randomizedtesting.annotations.Name;
 import com.carrotsearch.randomizedtesting.annotations.ParametersFactory;
 
-import org.elasticsearch.Build;
 import org.elasticsearch.action.ActionListener;
 import org.elasticsearch.cluster.metadata.IndexMetadata;
 import org.elasticsearch.cluster.node.DiscoveryNode;
@@ -33,6 +32,7 @@ import java.util.concurrent.TimeUnit;
 import java.util.stream.Collectors;
 
 import static org.elasticsearch.test.hamcrest.ElasticsearchAssertions.assertAcked;
+import static org.elasticsearch.xpack.esql.action.EsqlQueryRequest.syncEsqlQueryRequest;
 import static org.hamcrest.Matchers.hasSize;
 import static org.hamcrest.Matchers.is;
 
@@ -148,35 +148,67 @@ public class TelemetryIT extends AbstractEsqlIntegTestCase {
                 ) },
             new Object[] {
                 new Test(
-                    "TS time_series_idx | LIMIT 10",
-                    Build.current().isSnapshot() ? Map.ofEntries(Map.entry("TS", 1), Map.entry("LIMIT", 1)) : Collections.emptyMap(),
-                    Map.ofEntries(),
-                    Build.current().isSnapshot()
+                    """
+                        FROM idx
+                        | EVAL y = to_str(host)
+                        | RENAME host as host_left
+                        | LOOKUP JOIN lookup_idx ON host_left == host
+                        """,
+                    Map.ofEntries(
+                        Map.entry("RENAME", 1),
+                        Map.entry("FROM", 1),
+                        Map.entry("EVAL", 1),
+                        Map.entry("LOOKUP JOIN ON EXPRESSION", 1)
+                    ),
+                    Map.ofEntries(Map.entry("TO_STRING", 1)),
+                    true
                 ) },
             new Object[] {
                 new Test(
-                    "TS time_series_idx | STATS max(id) BY host | LIMIT 10",
-                    Build.current().isSnapshot()
-                        ? Map.ofEntries(Map.entry("TS", 1), Map.entry("STATS", 1), Map.entry("LIMIT", 1))
+                    "TS time_series_idx | LIMIT 10",
+                    Map.ofEntries(Map.entry("TS", 1), Map.entry("LIMIT", 1)),
+                    Map.ofEntries(),
+                    true
+                ) },
+            new Object[] {
+                new Test(
+                    "TS time_series_idx | STATS max(cpu) BY host | LIMIT 10",
+                    Map.ofEntries(Map.entry("TS", 1), Map.entry("STATS", 1), Map.entry("LIMIT", 1)),
+                    Map.ofEntries(Map.entry("MAX", 1)),
+                    true
+                ) },
+            new Object[] {
+                new Test(
+                    """
+                        FROM idx
+                        | EVAL ip = TO_IP(host), x = TO_STRING(host), y = TO_STRING(host)
+                        | INLINE STATS MAX(id)
+                        """,
+                    EsqlCapabilities.Cap.INLINE_STATS.isEnabled()
+                        ? Map.of("FROM", 1, "EVAL", 1, "INLINE STATS", 1)
                         : Collections.emptyMap(),
-                    Build.current().isSnapshot() ? Map.ofEntries(Map.entry("MAX", 1)) : Collections.emptyMap(),
-                    Build.current().isSnapshot()
-                ) }
-            // awaits fix for https://github.com/elastic/elasticsearch/issues/116003
-            // ,
-            // new Object[] {
-            // new Test(
-            // """
-            // FROM idx
-            // | EVAL ip = to_ip(host), x = to_string(host), y = to_string(host)
-            // | INLINESTATS max(id)
-            // """,
-            // Build.current().isSnapshot() ? Map.of("FROM", 1, "EVAL", 1, "INLINESTATS", 1) : Collections.emptyMap(),
-            // Build.current().isSnapshot()
-            // ? Map.ofEntries(Map.entry("MAX", 1), Map.entry("TO_IP", 1), Map.entry("TO_STRING", 2))
-            // : Collections.emptyMap(),
-            // Build.current().isSnapshot()
-            // ) }
+                    EsqlCapabilities.Cap.INLINE_STATS.isEnabled()
+                        ? Map.ofEntries(Map.entry("MAX", 1), Map.entry("TO_IP", 1), Map.entry("TO_STRING", 2))
+                        : Collections.emptyMap(),
+                    EsqlCapabilities.Cap.INLINE_STATS.isEnabled()
+                ) },
+            new Object[] {
+                new Test(
+                    """
+                        FROM idx, (FROM idx | WHERE host =="127.0.0.1")
+                        | WHERE id > 10
+                        """,
+                    EsqlCapabilities.Cap.SUBQUERY_IN_FROM_COMMAND.isEnabled()
+                        ? Map.of("FROM", 2, "UNIONALL", 1, "WHERE", 2)
+                        : Collections.emptyMap(),
+                    Collections.emptyMap(),
+                    EsqlCapabilities.Cap.SUBQUERY_IN_FROM_COMMAND.isEnabled()
+                ) },
+            // Implicit cast shouldn't add extra metrics
+            new Object[] { new Test("""
+                FROM idx
+                | EVAL x = DATE_DIFF("hours", "2021-01-02T00:00:00", "2021-01-02T00:00:00Z")
+                """, Map.of("FROM", 1, "EVAL", 1), Map.of("DATE_DIFF", 1), true) }
         );
     }
 
@@ -188,6 +220,12 @@ public class TelemetryIT extends AbstractEsqlIntegTestCase {
     }
 
     public void testMetrics() throws Exception {
+        if (testCase.query().contains("LOOKUP JOIN lookup_idx ON host_left == host")) {
+            assumeTrue(
+                "requires LOOKUP JOIN ON boolean expression capability",
+                EsqlCapabilities.Cap.LOOKUP_JOIN_ON_BOOLEAN_EXPRESSION.isEnabled()
+            );
+        }
         DiscoveryNode dataNode = randomDataNode();
         testQuery(dataNode, testCase);
     }
@@ -277,10 +315,7 @@ public class TelemetryIT extends AbstractEsqlIntegTestCase {
     }
 
     private static EsqlQueryRequest executeQuery(String query) {
-        EsqlQueryRequest request = EsqlQueryRequest.syncEsqlQueryRequest();
-        request.query(query);
-        request.pragmas(randomPragmas());
-        return request;
+        return syncEsqlQueryRequest(query).pragmas(randomPragmas());
     }
 
     private static void loadData(String nodeName) {
